# Streamlit

projeto_streamlit/: App.py  pyproject.toml
projeto_streamlit/dashs/: altair_01.py  columns.py  exemplo_dataframe.py  exemplo_json.py  exemplo_magic.py  exemplo_metrics.py  exemplo_textos.py  exemplo_write.py  expander.py  forms.py  g_arc.py  g_area.py  g_barras.py  g_disp.py  g_hist.py  g_linhas.py  midia_add.py  sidebar.py  status.py  widgets.py
projeto_streamlit/dashs/.streamlit/: .config.toml
projeto_streamlit/dashs/Datasets/: teste_car.json
