[tool.poetry]
name = "projeto-streamlit"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
altair = "^5.3.0"
datetime = "^5.5"
openpyxl = "^3.1.2"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
